--- a/index.html
+++ b/index.html
@@ -24,13 +24,20 @@
  <!---------------------------------------la grande carte mobile---------------------------------------------------------------->
  <div class="app1">
 
+ <!---------------------------------------bande logo instagrame---------------------------------------------------------------->
+  <div class=" bande1">
+              <img src="img/insta logo.jpg" alt="" style="position: absolute; bottom: 5%;">
+             <a class="btn btn-primary" href="#" role="button" style=" position: absolute; bottom: 5%; right: 17px;;" > <strong>Ouvrir l'app</strong></a>
+             <h6 style=" color: rgb(0, 140, 255); position: absolute; bottom: 0; right: 150px;">se connecter</h6>
+      </div>
+
+               <!------------------------------image profile------------------------------------------------------->
+             <img src="img/femme3.jpg" alt="" style="border-radius: 45px;  position: absolute; bottom: 70%;right: 310px; border: 4px  solid#fc466b ; cursor: pointer;  " class="image1">
+             <p style=" position: absolute;bottom: 73%;right: 110px;  font-size: 20px;">Aubierge Pruvost97</p>
 
 
-
-
-
-
-
+<!------------------------------image certifer------------------------------------------------------>
+                    <img src="img/certifier.jpg" alt="" style=" position: absolute;bottom: 76%;right: 85px;  font-size: 20px ; cursor: pointer;  ">
 
 
 
