--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <img src="img/certifier.jpg" alt="" style=" position: absolute;bottom: 76%;right: 85px;  font-size: 20px ; cursor: pointer;  ">
 
 
-
+<!------------------------------bouton abonnement------------------------------------------------------>
+                            <button type="button" class="btn btn-primary btn-sm"  style="   position: absolute;bottom: 70%;right: 190px; " >S'abonner</button>
 
 
 
