--- a/index.html
+++ b/index.html
@@ -44,9 +44,26 @@
                             <button type="button" class="btn btn-primary btn-sm"  style="   position: absolute;bottom: 70%;right: 190px; " >S'abonner</button>
 
 
+ <!------------------------------section text profil------------------------------------------------------>
+ 
+                                     <p style="position: absolute; bottom: 63%; right: 225px;"> <strong>Aubierge Pruvost97</strong> </p>
+
+                                          <p style="position: absolute; bottom: 59%; right: 225px;">@tTwitter: @Aubierge</p>
+                                          <p style="position: absolute; bottom: 55%; right: 259px; color: blue;"> cutt.ly/YwLRcAO</p>
+
+                                                           <!------------------------------Profile simulaire ------------------------------------------------------>
+
+              <img src="img/femme 1.jfif" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 321px; cursor: pointer;">
 
 
+           <img src="img/homme2.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 245px; cursor: pointer;">
 
+          <img src="img/femme7.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 168px; cursor: pointer; ">
+
+          <img src="img/profil.JPG" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 91px; cursor: pointer; ">
+
+
+           <img src="img/femme4.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 15px;  cursor: pointer; ">
 
 
 
