--- a/index.html
+++ b/index.html
@@ -66,15 +66,38 @@
            <img src="img/femme4.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 15px;  cursor: pointer; ">
 
 
+    <!------------------------------les nom------------------------------------------------------>
+                                               <p style=" position: absolute; bottom: 42%; right: 338px;">Fany</p>
+
+                                                        <p style=" position: absolute; bottom: 42%; right: 255px;">Myron</p>
+
+                                                                <p style=" position: absolute; bottom: 42%; right: 180px;">Laure</p>
+
+                                                                         <p style=" position: absolute; bottom: 42%; right: 98px;">Pruvost</p>
+
+                                                                                 <p style=" position: absolute; bottom: 42%; right: 36px;">Clara</p>
 
 
 
+<!------------------------------les abonnés ------------------------------------------------------>
 
+<h6 style=" position: absolute; bottom: 35%; right: 335px; " > <strong>988</strong></h6>
 
+       <h6 style="position: absolute; bottom: 35%; font-size: 13px; right: 194px;  " > <strong>10m</strong> </h6>
 
+            <h6 style="position: absolute; bottom: 35%; font-size: 13px; right: 65px;   " ><strong>900</strong> </h6>
+</div>
 
+     
+<!------------------------------icone------------------------------------------------------>
 
+                       <img src="img/icone maison.png" alt=" "  style=" position: absolute; bottom: 32%; font-size: 13px; right: 351px;cursor: pointer;">   
 
+                                 <img src="img/image video.jpg" alt=" "  style=" position: absolute; bottom: 32%; font-size: 13px; right: 250px;cursor: pointer;">
+
+                                              <img src="img/video icone.jpg" alt=" "  style=" position: absolute; bottom: 32%; font-size: 13px; right: 139px; cursor: pointer;">
+
+                                                              <img src="img/icone photo.jpg" alt=" "  style=" position: absolute; bottom: 32%; font-size: 13px; right: 25px; cursor: pointer;">
 
 
 
