--- a/index.html
+++ b/index.html
@@ -52,18 +52,17 @@
                                           <p style="position: absolute; bottom: 55%; right: 259px; color: blue;"> cutt.ly/YwLRcAO</p>
 
                                                            <!------------------------------Profile simulaire ------------------------------------------------------>
-
-              <img src="img/femme 1.jfif" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 321px; cursor: pointer;">
-
-
-           <img src="img/homme2.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 245px; cursor: pointer;">
-
-          <img src="img/femme7.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 168px; cursor: pointer; ">
-
-          <img src="img/profil.JPG" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 91px; cursor: pointer; ">
+<img src="img/femme 1.jfif" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 321px; cursor: pointer;">
 
 
-           <img src="img/femme4.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 15px;  cursor: pointer; ">
+<img src="img/homme2.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 245px; cursor: pointer;">
+
+              <img src="img/femme7.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 168px; cursor: pointer; ">
+
+                       <img src="img/profil.JPG" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 91px; cursor: pointer; ">
+
+
+                                 <img src="img/femme4.jpg" alt="" style=" border-radius: 45px; border: 4px solid #fc466b;   position: absolute; bottom: 47%; right: 15px;  cursor: pointer; ">
 
 
     <!------------------------------les nom------------------------------------------------------>
@@ -104,11 +103,35 @@
 
 
 
+ <!------------------------------SECTION PHOTO 1------------------------------------------------------>
+
+ <section style=" position: absolute;bottom: 20%; right: -10px;">
+
+                      <a href="photo1.html"><img src="img/yuyu.jpg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 294px; border: 2px solid white;  box-shadow: 0 0 6px gray; cursor: pointer  "></a>
+  
+                                 <a href="photo2.html"><img src="img/tata.jpeg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 210px; border: 2px solid white;  box-shadow: 0 0 6px gray; cursor: pointer  " ></a>
+                                                <a href="photo3.html"><img src="img/popo.jpg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 126px; border: 2px solid white;  box-shadow: 0 0 6px gray;  cursor: pointer  " ></a>
+  
+                                                            <a href="photo4.html"><img src="img/koko.jpg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 46px; border: 2px solid white;  box-shadow: 0 0 6px gray ; cursor: pointer  "></a>
+  
+                                                                             </section>
 
 
 
+ <!------------------------------SECTION PHOTO2------------------------------------------------------>
 
+              <section style=" position: absolute;bottom: 10%; right: -10px;">
 
+                       <a href="photo6.html"><img src="img/pipi.jpg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 294px; border: 2px solid white;  box-shadow: 0 0 6px gray; cursor: pointer  "></a>
+  
+                                 <a href="poho5.html"><img src="img/jule.jpg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 210px; border: 2px solid white;  box-shadow: 0 0 6px gray;cursor: pointer  "></a>
+  
+  
+                                          <a href="photo7.html"><img src=" img/lili.jpg " alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 126px; border: 2px solid white;  box-shadow: 0 0 6px gray; cursor: pointer "></a>
+
+                                                        <a href="photo8.html"><img src="img/vivi.jpg" alt="" style="  position: absolute; bottom: 20%; font-size: 13px; right: 46px; border: 2px solid white;  box-shadow: 0 0 6px gray; cursor: pointer "></a>
+  
+                                                                  </section>
 
 
 
@@ -118,51 +141,15 @@
  
  
  
+
+
+
+
+
+
+
+
+                                                                  
  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
