--- a/index.html
+++ b/index.html
@@ -185,14 +185,7 @@ right: 190px; " >S'abonner</button>
 </div>
 
 <!------------------------------jquery------------------------------------------------------>
-<script>
 
-$(document).ready(function(){
-  $(".bouton").mouseenter(function(){
-  $("body").css("background", "-webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%"); 
-});
-})
-  </script>
-
+<script src="js/min.js"></script>
 </body>
 </html>
