--- a/instagramelogo.html
+++ b/instagramelogo.html
@@ -31,27 +31,7 @@ cursor: pointer;
 
 <!------------------------------jquery------------------------------------------------------>
 
-<script>
 
-$(window).css("background-color", "yellow")
-$(document).ready(function(){
-$(".btn1").mouseenter(function(){
-  $("body").css("background", "-webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%"); 
- });
- $(".btn1").mouseleave(function(){
-  $("body").css("background", "white")
-});
-$(".btn2").mouseenter(function(){
-  
-  $("body").css("background", "  #0092ed  "); 
-
-});
-$(".btn2").mouseleave(function(){
-$("body").css("background", "white")
-});
-});
- 
-</script>
-
+<script src="js/min.js"></script>
 </body>
 </html>
